import com.pluralsight.deli.UserInterface;

import java.util.Scanner;

public class DeliApp {
    public static void main(String[] args) {
            // Call method to run the app
            UserInterface ui = new UserInterface();
            ui.runApp(); // Start the application
    }

}