package com.pluralsight.deli;

public enum ChipType { CHEETOS, LAYS, DORITOS, SUNCHIPS,
}
