package com.pluralsight.deli;

public enum DrinkSize {
    SMALL, MEDIUM, LARGE

}
