package com.pluralsight.deli;

public enum DrinkType {
    LEMONADE, TEA, WATER, SPRITE, COKE
}
