package com.pluralsight.deli;

public enum SandwichSize {

FOUR_INCHES, EIGHT_INCHES, TWELVE_INCHES,
}

