package com.pluralsight.deli;

public enum SauceType { MAYO, RANCH, VINEGAR, ITAILAN, HONEYMUSTARD
}
