package com.pluralsight.deli;

public enum ToppingType {
    PREMIUM, REGULAR,
}
